--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 language: go
 go: "1.23.3"
 
-matrix:
-  include:
-    - os: linux
-    - os: windows
+os: windows
 
 script:
-  - echo "Running build step."
+  - echo "Running build step"
